--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,9 +1,18 @@
-.background {
-    height: 143vh;
+html, body{
+    height: 100%;
+}
+
+body {
     background: url("netflix_bg.jpg");
+    background-position: center center;
+    background-repeat:  no-repeat;
+    background-attachment: fixed;
+    background-size:  cover;
+
+    height: 100%;
     background-color: #2d3436;
     background-blend-mode: overlay;
-    width: 100%;
+    /*width: 100%;*/
 }
 
 .review-card {
