--- a/src/components/SearchBarComponent/SearchBarComponent.css
+++ b/src/components/SearchBarComponent/SearchBarComponent.css
@@ -2,7 +2,7 @@
     margin-bottom: 10px;
     margin-top: 10px;
     height: 60px;
-    background-color: white;
+    background-color: transparent;
     border-radius: 30px;
     padding: 10px;
     }
