--- a/src/components/MovieDetailsComponent/MovieDetailsComponent.css
+++ b/src/components/MovieDetailsComponent/MovieDetailsComponent.css
@@ -12,3 +12,17 @@
   color: black;
   background-color: white;
 }
+
+.bold-text {
+    font-weight: bold;
+    font-size: large;
+}
+
+
+.background {
+    height: 120vh;
+    background: url("../netflix_bg.jpg");
+    background-color: #2d3436;
+    background-blend-mode: overlay;
+    width: 100%;
+}
