--- a/src/components/MovieDetailsComponent/MovieDetailsComponent.css
+++ b/src/components/MovieDetailsComponent/MovieDetailsComponent.css
@@ -18,11 +18,18 @@
     font-size: large;
 }
 
+html, body{
+    height: 100%;
+}
 
-.background {
-    height: 120vh;
-    background: url("../netflix_bg.jpg");
-    background-color: #2d3436;
-    background-blend-mode: overlay;
-    width: 100%;
+body {
+    background: url("../netflix_bg.jpg")!important;
+    background-position: center center!important;
+    background-repeat: revert!important;
+    background-attachment: fixed;
+    background-size:  cover;
+    height: 100%;
+    background-color: #2d3436!important;
+    background-blend-mode: overlay!important;
+    /*width: 100%;*/
 }
