--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -5,14 +5,13 @@ html, body{
 body {
     background: url("netflix_bg.jpg");
     background-position: center center;
-    background-repeat:  no-repeat;
+    background-repeat: revert;
     background-attachment: fixed;
     background-size:  cover;
 
     height: 100%;
     background-color: #2d3436;
     background-blend-mode: overlay;
-    /*width: 100%;*/
 }
 
 .review-card {
