--- a/src/home/Styles.css
+++ b/src/home/Styles.css
@@ -1,5 +1,7 @@
 .slider-item-background {
     width: 100%;
     height: 100%;
-    background-color: whitesmoke;
+    background: url("../components/netflix_bg.jpg");
+    background-blend-mode: overlay;
+    background-color: #2d3436;
 }
