--- a/src/home/Styles.css
+++ b/src/home/Styles.css
@@ -5,3 +5,9 @@
     background-blend-mode: overlay;
     background-color: #2d3436;
 }
+
+.navbar {
+    border: none;
+    border-radius: 0;
+    background-color: rgba(0,0,0,0.25);
+}
