--- a/src/components/IntroPageComponent/IntroPageComponent.css
+++ b/src/components/IntroPageComponent/IntroPageComponent.css
@@ -2,7 +2,7 @@
   margin: auto;
   text-align: center;
   width: 50%;
-  padding-top: 250px
+  padding-top: 20px
 }
 
 .white-title {
@@ -10,11 +10,15 @@
 }
 
 .footer {
-  padding-top: 70px
+  padding-top: 20px
 }
 
 .footer-image {
   border-radius: 100px;
   width: 200px;
   height: 200px;
+}
+
+.some-pad {
+  padding-top: 10px
 }
