--- a/src/components/HomeComponent/Styles.css
+++ b/src/components/HomeComponent/Styles.css
@@ -1,7 +1,7 @@
 .slider-item-background {
     width: 100%;
     height: 100%;
-    background: url("../components/netflix_bg.jpg");
+    background: url("../../assets/netflix_bg.jpg");
     background-blend-mode: overlay;
     background-color: #2d3436;
 }
